--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdi/font": "^5.8.55",
     "@nuxtjs/auth-next": "^5.0.0-1608568767.2fe2217",
     "@nuxtjs/axios": "^5.12.4",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/toast": "^3.3.1",
     "@tailwindcss/forms": "^0.2.1",
@@ -24,9 +25,12 @@
     "nuxt": "^2.14.12",
     "nuxt-material-design-icons": "^1.0.4",
     "sockjs-client": "^1.5.0",
-    "stompjs": "^2.3.3"
+    "stompjs": "^2.3.3",
+    "v-mask": "^2.2.4",
+    "vuejs-datepicker": "^1.6.2"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^3.4.2"
+    "@nuxtjs/tailwindcss": "^3.4.2",
+    "dotenv": "^8.2.0"
   }
 }
